--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,8 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.3rem;
+}
