--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,15 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+/* h1 section */
+h1 {
+    font-size: 1.5rem;
+    font-weight: 100;
+    color: #555;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
