--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,10 @@ h1 {
     align-items: center;
     padding-bottom: 6rem;
 }
+
+/* Paragraph Section */
+.container>.card p {
+    font-size: 0.8rem;
+    font-weight: 100;
+    text-align: center;
+}
