--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 
 /* h1 section */
 h1 {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: 100;
     color: #555;
     display: flex;
@@ -84,4 +84,51 @@ footer {
     align-items: center;
     font-size: .8rem;
     font-weight: 100;
+}
+
+/* Media Query Section */
+/* Mobile size */
+@media only screen and (max-width: 600px) {
+
+    /* h1 section */
+    .header > h1 {
+        font-size: 1rem;
+        font-weight: 100;
+        color: #555;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 0;
+    }
+
+    /* Images */
+    img {
+        width: 100%;
+    }
+
+    /* About Section */
+    .container>.about-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.6rem;
+        font-weight: 100;
+    }
+
+    /* Card Section */
+    .container>.card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 3rem;
+    }
+
+    /* h2 Section */
+    .container>.card>h2 {
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
 }
