--- a/styles.css
+++ b/styles.css
@@ -1,134 +1,143 @@
 /* Root */
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 1.3rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 1.3rem;
 }
 
 .header {
-    height: 9vh;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height: 9vh;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* h1 section */
 h1 {
-    font-size: 1.8rem;
+  font-size: 1.8rem;
+  font-weight: 100;
+  color: #555;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+/* Container Section */
+.container {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: auto;
+  padding: 2rem;
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.container::-webkit-scrollbar {
+  /* WebKit */
+  width: 0;
+  height: 0;
+}
+
+/* Card Section */
+.container > .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 6rem;
+}
+
+/* Paragraph Section */
+.container > .card p {
+  font-size: 0.8rem;
+  font-weight: 100;
+  text-align: center;
+}
+
+/* h2 Section */
+.container > .card > h2 {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+/* About Section */
+.container > .about-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.9rem;
+  font-weight: 100;
+}
+
+/* About-section div */
+.container > .about-section > div {
+  padding: 1rem;
+}
+
+/* Footer Section */
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  font-weight: 100;
+}
+
+/* Media Query Section */
+/* Mobile size */
+@media only screen and (max-width: 600px) {
+  /* h1 section */
+  .header > h1 {
+    font-size: 1rem;
     font-weight: 100;
     color: #555;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
-}
+    padding-bottom: 0;
+  }
 
-/* Container Section */
-.container {
-    max-width: 800px;
-    margin: auto;
-    overflow: auto;
-    padding: 2rem;
-}
+  /* Images */
+  img {
+    width: 100%;
+  }
 
-/* Card Section */
-.container>.card {
+  /* About Section */
+  .container > .about-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-bottom: 6rem;
-}
-
-/* Paragraph Section */
-.container>.card p {
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     font-weight: 100;
-    text-align: center;
-}
+  }
 
-/* h2 Section */
-.container>.card>h2 {
-    font-size: 2rem;
+  /* Card Section */
+  .container > .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 3rem;
+  }
+
+  /* h2 Section */
+  .container > .card > h2 {
+    font-size: 1.5rem;
     font-weight: 600;
-}
-
-/* About Section */
-.container>.about-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 0.9rem;
-    font-weight: 100;
-}
-
-/* About-section div */
-.container>.about-section>div {
-    padding: 1rem;
-}
-
-/* Footer Section */
-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: .8rem;
-    font-weight: 100;
-}
-
-/* Media Query Section */
-/* Mobile size */
-@media only screen and (max-width: 600px) {
-
-    /* h1 section */
-    .header > h1 {
-        font-size: 1rem;
-        font-weight: 100;
-        color: #555;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 0;
-    }
-
-    /* Images */
-    img {
-        width: 100%;
-    }
-
-    /* About Section */
-    .container>.about-section {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 0.6rem;
-        font-weight: 100;
-    }
-
-    /* Card Section */
-    .container>.card {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 3rem;
-    }
-
-    /* h2 Section */
-    .container>.card>h2 {
-        font-size: 1.5rem;
-        font-weight: 600;
-    }
+  }
 }
