--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,9 @@
 /* Root */
+@font-face {
+	font-family: HKGrotesk;
+	src: url('/Fonts/HKGrotesk-Medium.woff')format('woff');
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -7,9 +12,10 @@
 
 body {
   /*font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;*/
-  font-family: Arial, Helvetica, sans-serif;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 1.3rem;
+ /* font-family: Arial, Helvetica, sans-serif;*/
+ /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;*/
+  font-family: HKGrotesk;	
+  font-size: 18px;
 }
 
 .header {
