--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,108 +15,74 @@ body {
   font-size: 18px;
 }
 
-.header {
-  height: 9vh;
+/* Navbar Section */
+nav {
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+  /*height: 85px;*/
+  line-height: 120px;
+}
+
+nav .wrapper {
+  position: relative;
+  max-width: 1140px;
+  padding: 0 30px;
   margin: auto;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  background: white;
-  z-index: 1;
-  width: 100%;
-  position: fixed;
-  padding: 2rem;
+  justify-content: space-between;
 }
 
-/* h1 section */
-h1 {
-  font-size: 1.8rem;
-  font-weight: 100;
-  color: #000;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
+.wrapper .logo a {
+  color: #000000;
+  text-decoration: none;
+  font-size: 27px;
 }
 
-/* Container Section */
-.container {
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-  overflow: auto;
-  padding: 4rem;
-  overflow-y: scroll;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
+.nav-links {
+  display: inline-flex;
 }
 
-.container::-webkit-scrollbar {
-  /* WebKit */
+.nav-links li {
+  list-style: none;
+}
+
+a {
+  color: #000000;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 9px 15px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  letter-spacing: 0.1em;
+  position: relative;
+}
+a:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #000;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
   width: 0;
-  height: 0;
 }
-
-/* Card Section */
-.container > .card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 6rem;
-}
-
-/* Paragraph Section */
-.container > .card p {
-  font-size: 1.1rem;
-  font-weight: 400;
-  text-align: center;
-  margin-top: 0.75rem;
-  margin-bottom: 0.5rem;
-  line-height: 1.3;
-}
-
-/* h2 Section */
-.container > .card > h2 {
-  font-size: 2rem;
-  font-weight: 600;
-}
-
-/* About Section */
-.container > .about-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 0.9rem;
-  font-weight: 100;
-}
-
-/* About-section div */
-.container > .about-section > div {
-  padding: 1rem;
-  font-size: 1.2rem;
-}
-
-/* Socials Section */
-.socials {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+a:hover:after { 
+  width: 100%; 
+  left: 0; 
 }
 
 .socials > a > img {
-  width: 30px;
-  height: 30px;
-  left: 70%;
-  margin: -25px 0 0 -25px; /* apply negative top and left margins to truly center the element */
+  width: 20px;
+  height: 20px;
 }
 
 /* Footer Section */
-footer {
+/*footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -124,50 +90,6 @@ footer {
   font-size: 0.8rem;
   font-weight: 100;
   padding-top: 1rem;
-}
+}*/
 
-/* Media Query Section */
-/* Mobile size */
-@media only screen and (max-width: 600px) {
-  /* h1 section */
-  .header > h1 {
-    font-size: 1rem;
-    font-weight: 100;
-    color: #555;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 0;
-  }
 
-  /* Images */
-  img {
-    width: 100%;
-  }
-
-  /* About Section */
-  .container > .about-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 0.6rem;
-    font-weight: 100;
-  }
-
-  /* Card Section */
-  .container > .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 3rem;
-  }
-
-  /* h2 Section */
-  .container > .card > h2 {
-    font-size: 1.5rem;
-    font-weight: 600;
-  }
-}
