--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -173,7 +173,7 @@ p {
 
 	/* Header */
 	header {
-		height: 7vh;
+		height: 10vh;
 	}
 
 	h1 {
@@ -214,7 +214,7 @@ p {
 
 @media screen and (max-width: 375px){
 	section {
-		padding: 20px 25px;
+		padding: 10px 25px;
 	}
 
 	section > div {
@@ -227,40 +227,43 @@ p {
 
 	/* Header */
 	header {
-		height: 5vh;
+		height: 10vh;
 	}
 
 	h1 {
 		font-size: 2.5rem;
+		font-weight: normal;
 	}
 
 	h2 {
-		font-size: 1.75rem;
+		font-size: 1.5rem;
+		font-weight: normal;
 		padding-bottom: 2rem;
 	}
 
 	h3 {
 		font-size: 1.3rem;
-		font-weight: 800;
+		font-weight: 600;
 		padding-top: 1rem;
 	}
 
 	p {
-		font-size: .9rem;
+		font-size: .8rem;
 	}
 
 	/* Navbar Section */
 	nav {
-		width: 105vw;
-	}
-	
-	nav .wrapper {
-		padding: 0 20px;
-	}
-
-	.wrapper > .logo > a {
-    	font-size: 1.09rem;
-    	margin-left: -5px;
+    	width: 105vw;
+  	}
+  
+  	nav .wrapper {
+    	padding: 0 28px;
+  	}
+  
+  	.wrapper .logo a {
+    	font-size: 15.5px;
+		font-weight: 550;
+    	margin-left: -20px;
   	}
 
 	/* Links */
@@ -270,13 +273,13 @@ p {
 	}
 
 	.exhibitions {
-    	font-size: 1.2rem;
+    	font-size: 1rem;
     	font-weight: 800;
 	}
 
 	/* Footer Section */
 	.footer .row .col {
-		padding: 3%;
-		font-size: 90%;
+		padding: 6%;
+		font-size: 100%;
 	}
 }
