--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -76,7 +76,7 @@ nav .wrapper {
 }
 
 a {
-	color: #525f7f;
+	color: #000000;
 	text-decoration: none;
 	font-size: 18px;
 	font-weight: 500;
@@ -254,6 +254,7 @@ p {
 	/* Navbar Section */
 	nav {
     	width: 105vw;
+		line-height: 90px;
   	}
   
   	nav .wrapper {
@@ -261,20 +262,25 @@ p {
   	}
   
   	.wrapper .logo a {
-    	font-size: 15.5px;
-		font-weight: 550;
+    	font-size: 16px;
+		font-weight: normal;
     	margin-left: -20px;
   	}
 
 	/* Links */
-	a {
-		font-size: 13px;
-		padding: 0px 3px;
-	}
+  	a {
+    	font-size: 12px;
+    	padding: 0px 4px;
+  	}
 
 	.exhibitions {
     	font-size: 1rem;
     	font-weight: 800;
+	}
+
+	.socials > a > img {
+		width: 15px;
+		height: 15px;
 	}
 
 	/* Footer Section */
