Edit Contact Page for a Small Device

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -89,7 +89,7 @@ a:hover:after {
 }
 
 .contact__section {
-  padding: 4%;
+  padding: 6%;
 }
 
 .contact__section .row {
@@ -196,6 +196,7 @@ a:hover:after {
   .contact__section .row h1 {
     font-size: 200%;
     font-weight: normal;
+    margin-top: .3rem;
   }
 
   .contact__section .row p {
