--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -163,6 +163,84 @@ a:hover:after {
   }
 }
 
+@media only screen and (max-width: 896px) {
+  header {
+    height: 10vh;
+  }
+
+  .wrapper .logo a {
+    font-size: 27px;
+    font-weight: 500;
+  }
+
+  /* Links */
+  a {
+    font-size: 14px;
+    padding: 1px 15px;
+  }
+
+  .contact__section {
+    padding: 40px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 350%;
+    font-weight: normal;
+    text-align: center;
+  }
+
+  .contact__section .row p {
+    font-size: 200%;
+    text-align: center;
+  }
+
+  /* Footer Section */
+  .footer .row .col {
+    padding: 6%;
+    font-size: 100%;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 812px) {
+  header {
+    height: 10vh;
+  }
+
+  .wrapper .logo a {
+    font-size: 27px;
+    font-weight: 500;
+  }
+
+  /* Links */
+  a {
+    font-size: 14px;
+    padding: 1px 15px;
+  }
+
+  .contact__section {
+    padding: 40px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 350%;
+    font-weight: normal;
+    text-align: center;
+  }
+
+  .contact__section .row p {
+    font-size: 200%;
+    text-align: center;
+  }
+
+  /* Footer Section */
+  .footer .row .col {
+    padding: 6%;
+    font-size: 100%;
+    text-align: center;
+  }
+}
+
 /* --------- Small Phones to Small Tablets --------- */
 @media only screen and (max-width: 768px) {
   header {
@@ -247,6 +325,59 @@ a:hover:after {
 
   .contact__section .row p {
     font-size: 150%;
+    text-align: center;
+  }
+  
+  /* Footer Section */
+  .footer .row .col {
+    font-size: 100%;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  /* Header */
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+    width: 100vw;
+  }
+  
+  nav .wrapper {
+    padding: 0 20px;
+  }
+  
+  .wrapper .logo a {
+    font-size: 17px;
+    font-weight: 500;
+  }
+
+  /* Links */
+  a {
+    font-size: 12px;
+    padding: 1px 5px;
+  }
+  
+  .socials > a > img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .contact__section {
+    padding: 20px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 200%;
+    font-weight: normal;
+    text-align: center;
+  }
+
+  .contact__section .row p {
+    font-size: 130%;
     text-align: center;
   }
   
